--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,7 @@
                 <ul>
                     <!-- Enlaces a redes sociales y medios de contacto -->
                     <li><a href="https://www.instagram.com/sam.rodri0630/" target="_blank">Instagram</a></li>
+                    <li><a href="https://www.linkedin.com/in/samuel-rodríguez-b004302b7" target="_blank">linkedin</a></li>
                     <li><a href="tel:+573126540694">Teléfono</a></li>
                     <li><a href="mailto:rodriguez.samuel2006@gmail.com">Correo Electronico</a></li>
                 </ul>
@@ -84,7 +85,7 @@
         <div id="habilidades" class="section">
             <h2>Habilidades</h2>
             <ul>
-                <li>Programación básica para automatización de Arduinos y elementos lógicos - año 2022</li>
+                <li>Programación básica para automatización de Arduinos y elementos lógicos</li>
                 <li>Desarrollo de algoritmos y procesos lógicos en Python, Java y C++</li>
                 <li>Conocimiento básico de HTML y C++</li>
                 <li>Desarrollo de bases de datos locales e interfaces</li>
