--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
                 <li><strong>Edad:</strong> 18 años</li>
                 <li><strong>Profesión:</strong> En proceso de graduación en Ingeniería Informática</li>
                 <li><strong>Dirección:</strong> Calle 3 # 3e-116 Cajicá, Huertas de Cajicá 3</li>
-                <li><strong>Teléfono:</strong> 312 6540696</li>
+                <li><strong>Teléfono:</strong><a href="tel:+573126540694"> 3126540694</a>
                 <li><strong>Correo electrónico institucional:</strong> <a href="mailto:samuelroul@unisabana.edu.co">samuelroul@unisabana.edu.co</a></li>
                 <li><strong>Correo electrónico personal:</strong> <a href="mailto:rodriguez.samuel2006@gmail.com">rodriguez.samuel2006@gmail.com</a></li>
             </ul>
