--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de vida - Samuel Andres Rodriguez Ulloa</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Enlace a una hoja de estilo externa -->
+    <link rel="stylesheet" href="s"> <!-- Enlace a una hoja de estilo externa -->
 </head>
 <body>
     <div class="sidebar"> <!-- Barra lateral para la navegación y la foto -->
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <script>
+    <!--<script>
         // Función para mostrar la sección seleccionada y ocultar las demás
         function showSection(sectionId) {
             var sections = document.querySelectorAll('.section');
@@ -124,6 +124,6 @@
         document.addEventListener('DOMContentLoaded', function() {
             showSection('informacion-personal');
         });
-    </script>
+    </script>-->
 </body>
 </html>
